--- a/Graph/vi/graphs.html
+++ b/Graph/vi/graphs.html
@@ -157,6 +157,7 @@
   </table>
   <div id="actions" class="panel">
     <!--<p onClick="matrixInput();">Nhập đồ thị từ ma trận</p> -->
+    <p id="readFile">Nhập từ file</p>
     <p onClick="GraphVisu(true , true , 'CP3Fig2.4');">U/U: CP3 Fig 2.4</p>
     <p onClick="GraphVisu(true , true , 'CP3Fig2.4_disjoint');">U/U: CP3 Fig 2.4, disjoint</p>
     <p onClick="GraphVisu(true , true , 'tree');">U/U: Tree</p>
