--- a/Graph/vi/mst.html
+++ b/Graph/vi/mst.html
@@ -162,6 +162,7 @@
   <div id='e-lecture' class='panel'></div>
   <div id="overlay" hidden></div>
   <div id="actions" class="panel">
+    <p id="readFile">Nhập từ file</p>
     <p id="draw" onclick=drawGraph()>Vẽ đồ thị</p>
     <p id="examples" class="execAction">Đồ thị ví dụ</p>
     <p id="kruskals" class="execAction" onclick="kruskals()">Thuật toán Kruskal</p>
