--- a/Graph/vi/sssp.html
+++ b/Graph/vi/sssp.html
@@ -173,6 +173,7 @@
   <div id="overlay" hidden></div>
   <div id="dropdown-temp-holder" hidden></div>
   <div id="actions" class="panel">
+    <p id="readFile">Nhập từ file</p>
     <p id="draw" onclick="drawGraph()">Vẽ đồ thị</p>
     <p id="examples">Đồ thị ví dụ</p>
     <p id="bellmanford">Bellman Ford&#39;s(s)</p>
