--- a/Graph/vi/graphs.html
+++ b/Graph/vi/graphs.html
@@ -39,7 +39,7 @@
     <div id="mode-menu">
       <div id='mode-button' title='exploration'>Chế độ thăm dò &#9663;</div>
     </div>
-    <p id="demo"></p>
+    //<p id="demo"></p>
     <p>
       <div id="textArea" class="overlays">
         <div id="infoTextArea"></div>
@@ -2635,7 +2635,7 @@
       //emptySVG.empty();
       $("#svgidd").empty();
       a = document.getElementById("myTextarea").value;
-      document.getElementById("demo").innerHTML = a;
+      //document.getElementById("demo").innerHTML = a;
       //line
       a = a.split('\n');
       for (i = 1; i <= a[0][0]; i++) {
