Xóa các file không cần thiết

--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
             </div>
         </div>
     </li>
+    <li class="viz" id="module3"">
+    	<div class="li-wrapper">
+            <a class="thumbnail" href="TestModule3/maps_script.html">
+                <img src="TestModule3/traveling-salesman-R.png">
+                <img class="static" src="TestModule3/traveling-salesman-R.png">
+            </a>
+            <div class="info">
+                <h3><a href="TestModule3/maps_script.html">Duyệt đồ thị</a></h3>
+                <div class="indv-viz-filters"></div>
+            </div>
+        </div>
+    </li>
 </ul>
 </div>
 
