Sửa lỗi không đọc được đồ thị vô hướng

--- a/TestModule3/maps_script.html
+++ b/TestModule3/maps_script.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="bootstrap.min.css" />
-    <script src="jquery.min.js"></script>
+    <script src="../Graph/js/jquery-3.3.1.min.js"></script>
     <script src="bootstrap.min.js"></script>
 </head>
 
