--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img class="static" src="TestModule3/traveling-salesman-R.png">
             </a>
             <div class="info">
-                <h3><a href="TestModule3/maps_script.html">Duyệt đồ thị</a></h3>
+                <h3><a href="TestModule3/maps_script.html">Bài toán salesman</a></h3>
                 <div class="indv-viz-filters"></div>
             </div>
         </div>
