--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <script src="Graph/js/common.js"></script>
 
 <!--fonts-->
-<link href="Graph/fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'>
-<link href="Graph/fonts/googleapi.css" rel='stylesheet' type='text/css'>
+<link href="Graph/fonts/silkscreen/stylesheet.css" rel='stylesheet' type='text/css'/>
+<link href="Graph/fonts/googleapi.css" rel='stylesheet' type='text/css'/>
 
 </head>
 
