--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             </div>
         </div>
     </li>
-    <li class="viz" id="module3"">
+    <li class="viz" id="salesman">
     	<div class="li-wrapper">
-            <a class="thumbnail" href="TestModule3/maps_script.html">
-                <img src="TestModule3/traveling-salesman-R.png">
-                <img class="static" src="TestModule3/traveling-salesman-R.png">
+            <a class="thumbnail" href="TestModule3/index.html">
+                <img src="Graph/img/traveling-salesman-R.png">
+                <img class="static" src="Graph/img/traveling-salesman-R.png">
             </a>
             <div class="info">
-                <h3><a href="TestModule3/maps_script.html">Bài toán salesman</a></h3>
+                <h3><a href="TestModule3/index.html">Bài toán salesman</a></h3>
                 <div class="indv-viz-filters"></div>
             </div>
         </div>
