--- a/TestModule3/index.html
+++ b/TestModule3/index.html
@@ -79,7 +79,18 @@
                     navigator.geolocation.getCurrentPosition(function (success) {
                         map.setCenter(new google.maps.LatLng(success.coords.latitude, success.coords
                             .longitude));
-                        map.setZoom(12);
+                        map.setZoom(16);
+                        latLng = new google.maps.LatLng(success.coords.latitude, success.coords
+                            .longitude)
+                        marker = new google.maps.Marker({
+                            position: latLng,
+                            map: map
+                        });
+                        markers.push(marker);
+                        nodes.push(latLng);
+
+                        // Update destination count
+                        $('#destinations-count').html(nodes.length);
                     });
                 });
             }
