Sửa lỗi đọc ma trận mst bị lỗi

--- a/Graph/vi/mst.html
+++ b/Graph/vi/mst.html
@@ -117,7 +117,7 @@
         <textarea id="myTextarea" class="overlays">Nhập ma trận kề vào đây...</textarea>
         <div class="scrollmenu" id="actionTextArea">
           <a onclick="closeTextArea()">Đóng</a>
-          <a onclick="example(matrixx); closeTextArea()">Xong</a>
+          <a onclick="example(mst); closeTextArea()">Xong</a>
         </div>
       </div>
     </p>
@@ -1027,7 +1027,7 @@
 
       fileReader.readAsText(fileToLoad, "UTF-8");
       closeUploadFile();
-      example(matrixx);
+      example(mst);
     }
   </script>
 </body>
